...
    <string name="subredditBanned">r/%s has been banned</string>
    <string name="subredditPrivate">r/%s is private</string>
    <string name="subredditPrivateDescription">You must be invited to access this community</string>
    <string name="subredditNotFound">r/%s doesn\'t exist</string>
    <string name="subredditRequiresPremium">You need a Reddit premium subscription to access r/%s</string>

    <string name="replyingTo">Replying to <b>%s</b></string>
    <string name="replyHint">Say something nice</string>
    <string name="preview">Preview</string>
    <string name="showPreview">Show preview</string>

    <string name="replyAddLinkDialogHeader">Add link</string>
    <string name="replyAddLinkDialogLinkTextHint">Text</string>
    <string name="replyAddLinkDialogLinkUrlHint">Link</string>

    <string name="replyConfirmBackPressDialogHeader">You have unsent text</string>
...
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="discard">Discard</string>
    <string name="enable">Enable</string>
    <string name="delete">Delete</string>

    <string name="dialogReplyNotLoggedInTitle">Not logged in</string>
    <string name="dialogReplyNotLoggedInContent">You are not logged in and won\'t be able to send a reply</string>
    <string name="dialogReplyPrivatelyBrowsingInTitle">You\'re browsing privately</string>
    <string name="dialogReplyPrivatelyBrowsingInContent">You are currently browsing privately and cannot send a reply unless this is disabled</string>

    <plurals name="numReplies">
        <item quantity="one">%d reply</item>
...
