<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/parentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textSize="20sp"
        android:textColor="@color/textColor"

        tools:text="Replying to hakonschia" />

    <EditText
        android:id="@+id/replyText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:textColor="@color/textColor"
        android:inputType="text"/>

    <Button
        android:id="@+id/btnAddComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:onClick="sendReply"
        android:textColor="@color/textColor"
        android:text="@string/btnAddComment"/>

</LinearLayout>